# Stay-Away-

./: CMakeLists.txt  README.md
Config/: window.ini
Contents/: Body.cpp  Body.hpp  Hatch.cpp  Hatch.hpp  Interactable.cpp  Interactable.hpp  Inventory.cpp  Inventory.hpp
Contents/Collectable/: Collectable.cpp  Collectable.hpp  Knife.cpp  Knife.hpp  Nail.cpp  Nail.hpp  SandBag.cpp  SandBag.hpp
Contents/Skillchecks/: Body.cpp  Body.hpp  Objective.cpp  Objective.hpp  SkillChecks.cpp  SkillChecks.hpp
Data/: Collision.gdat
Data/Map/: Mahdi.gmap  Test.gmap  beatiful_7.gmap  beautiful_7.gmap  beautiful_final.gmap  beautiful_revisi.gmap
Sources/: App.cpp  App.hpp  main.cpp  stdpch.cpp  stdpch.hpp
Sources/Core/: FilterArray.cpp  FilterArray.hpp  FindMap.cpp  FindMap.hpp  Randomizer.cpp  Randomizer.hpp  Vector.cpp  Vector.hpp
Sources/Entities/: Entity.cpp  Entity.hpp  Ghost.cpp  Ghost.hpp  Kunti.cpp  Kunti.hpp  Kuyang.cpp  Kuyang.hpp  Player.cpp  Player.hpp  Pocong.cpp  Pocong.hpp
Sources/Map/: Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  TileSelector.cpp  TileSelector.hpp
Sources/Shaders/: fragment_shader.frag  vertex_shader.vert
Sources/States/: EditorState.cpp  EditorState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  SettingsState.cpp  SettingsState.hpp  State.cpp  State.hpp
Sources/Systems/: Animation.cpp  Animation.hpp  Attributes.cpp  Attributes.hpp  Movement.cpp  Movement.hpp  Settings.cpp  Settings.hpp  SoundManager.cpp  SoundManager.hpp
Sources/UI/: Converter.cpp  Converter.hpp  PlayerGUI.cpp  PlayerGUI.hpp
(+33 files in other folders)
